--- a/src/components/support-info.scss
+++ b/src/components/support-info.scss
@@ -1,28 +1,28 @@
 /* support-info */
 
 .error-support {
-	margin-top: 58px;
+	margin-top: 30px;
 
-	h3 {
-		text-align: center;
-		margin: 20px 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
+
+	h3, p {
+		margin: 0 !important;
 	}
 
-	span.subtitle {
-		font-size: 0.9em;
-		margin-top: 0px;
-		color: #666;
+	.supportSection {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 5px;
 	}
 
-	dt {
-		margin-left: 10px;
-
-		&:after {
-			content: ':';
-		}
-	}
-
-	dd {
-		margin: 5px 0 10px 20px;
+	.supportItem {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 2px;
 	}
 }
