Major rework of api util. Widget admin uploads work. Tweaks to widget & user updates. Misc fixes & cleanup.

--- a/src/components/user-admin-page.scss
+++ b/src/components/user-admin-page.scss
@@ -245,6 +245,12 @@
 					padding: 0.5em;
 				}
 
+				button.action_button {
+					margin-left: 0.5em;
+					padding: 4px 10px;
+					font-size: 0.95em;
+				}
+
 				.radio {
 					display: inline-block;
 					// width: 200px;
